fix(window): wrong height of window titlebar in bootstrap theme

--- a/packages/bootstrap/scss/_variables.scss
+++ b/packages/bootstrap/scss/_variables.scss
@@ -1093,14 +1093,15 @@ $window-border-radius: $border-radius !default;
 
 $window-inner-padding-x: $modal-inner-padding !default;
 $window-inner-padding-y: $modal-inner-padding !default;
-$window-titlebar-border-width: 0 0 1px !default;
-$window-titlebar-border-style: solid !default;
-
-$window-title-font-size: $font-size-lg !default;
-$window-title-line-height: 1.3 !default;
 
 $window-titlebar-padding-x: $modal-header-padding !default;
 $window-titlebar-padding-y: $modal-header-padding !default;
+$window-titlebar-border-width: 0 0 1px !default;
+$window-titlebar-border-style: solid !default;
+
+$window-title-spacing: 0;
+$window-title-font-size: $font-size-lg !default;
+$window-title-line-height: $modal-title-line-height !default;
 
 $window-bg: $modal-content-bg !default;
 $window-text: $modal-content-color !default;
