--- a/packages/default/scss/window/_layout.scss
+++ b/packages/default/scss/window/_layout.scss
@@ -44,7 +44,7 @@
 
     // Title bar title text
     .k-window-title {
-        margin: -.15em 0;
+        margin: $window-title-spacing;
         font-size: $window-title-font-size;
         line-height: $window-title-line-height;
         text-overflow: ellipsis;
