--- a/packages/material/scss/_variables.scss
+++ b/packages/material/scss/_variables.scss
@@ -1169,6 +1169,7 @@ $window-titlebar-padding-y: 24px !default;
 $window-titlebar-border-width: 0 !default;
 $window-titlebar-border-style: solid !default;
 
+$window-title-spacing: -.15em 0 !default;
 $window-title-font-size: 20px !default;
 $window-title-line-height: 1.4 !default;
 
